# capricorn_competition_round

./: .editorconfig  .gitignore  README.md  run_comp_final  run_srcp2_final
.gitlab/issue_templates/: dev_ticket.md 
assets/: README.md  all_structure_proposals_src.xml  lmn.rviz
docker/dockerfiles/: competitor.dockerfile  gazebo-ros.dockerfile  solution.dockerfile
docker/scripts/: run_comp_final  run_srcp2_final
launch_files/: CMakeLists.txt  package.xml
maploc/: CMakeLists.txt  package.xml
maploc/launch/: compare_rtab_odom.launch  icp_odom.launch  localmaps.launch  make_pr_dataset.launch  mapping.launch  odom_comparison.launch  robot_localization.launch  rtabmap.launch
maploc/msg/: OdomError.msg  PosePR.msg  RSReset.msg
maploc/src/: cheat_initialize_rtabmap.cpp  gazebo_base_footprints.py  ground_truth.py  ground_truth_local_map.py  ground_truth_localmaps.py  ground_truth_pr.cpp  initialize_rtabmap.cpp  localization_odom_encoders.cpp  map_centering_frame.py  model_states.py  obstacle_localmaps.py  odom_error.cpp  pr_dataset.cpp  publish_cheat_odom.cpp  reset_odom.cpp  stationary_drift_filter.py
maploc/srv/: ResetOdom.srv
operations/: CMakeLists.txt  package.xml  package.xml.orig
operations/action/: Excavator.action  ExcavatorStateMachineTask.action  Hauler.action  Navigation.action  NavigationVision.action  ParkRobot.action  ResourceLocaliser.action  SolarMode.action  SolarRecharge.action
operations/include/operations/: excavator_state_machine.h  hauler_state_machine.h  navigation.h  navigation_algorithm.h  navigation_server.h  obstacle_avoidance.h  scout_state_machine.h  solar_charging_server.h
operations/launch/: nav_planner.launch  nav_test.launch  nav_vision_test.launch  navigation.launch  navigation_actionlib.launch  navigation_vision_test.launch  start_excavator.launch  start_hauler.launch  start_scout.launch  velocity_control.launch  wheel_controller.launch  wheel_pid.launch
operations/msg/: TrajectoryWithVelocities.msg  WheelVelocities.msg
operations/src/: ExcavatorClient.cpp  ExcavatorServer.cpp  HaulerClient.cpp  HaulerServer.cpp  HaulerServerNew.cpp  excavator_client.cpp  excavator_pid.cpp  excavator_server.cpp  excavator_state_machine.cpp  hauler_client.cpp  hauler_server.cpp  hauler_state_machine.cpp  image_converter.cpp  navigation_actionlib_server.cpp  navigation_algorithm.cpp  navigation_client.cpp  navigation_node.cpp  navigation_server.cpp  navigation_vision.cpp  navigation_vision_client.cpp  navigation_vision_server.cpp  park_hauler.cpp  park_hauler_client.cpp  park_hauler_excavator.cpp  park_hauler_hopper.cpp  park_hauler_server.cpp  radial_turn_tester.cpp  resource_localiser.cpp  scout_search.cpp  scout_state_machine.cpp  spiral_points_publisher.cpp  spiral_server.cpp  start_excavator_sm.cpp  start_hauler_sm.cpp  start_nav_server.cpp  start_scout_sm.cpp  state_machine_tester.cpp  this_is_a_car.cpp  trajectory_processor.cpp  wheel_speed_processing.cpp
operations/src/clients/: excavator_client copy.cpp  excavator_client.cpp  navigation_client.cpp  navigation_vision_client.cpp  park_hauler_client.cpp  solar_charging_client.cpp  solar_recharge_client.cpp  solar_recharging_client.cpp  spiral_points_publisher.cpp  trajectory_processor.cpp
operations/src/excavator/: excavator_pid.cpp  excavator_server.cpp
operations/src/hauler/: hauler_server.cpp  park_hauler_server.cpp
operations/src/navigation/: navigation_algorithm.cpp  navigation_server.cpp  navigation_vision_server.cpp  ramp_wheel_velocities.cpp  solar_charging_server.cpp  solar_recharge_server.cpp  start_nav_server.cpp  start_solar_charging_server.cpp  wheel_speed_processing.cpp
operations/src/scout/: resource_localiser.cpp  resource_localiser_tester.cpp  scout_search.cpp  scout_state_machine.cpp  solar_recharge_server.cpp
operations/src_clients/: navigation_vision_client.cpp
operations/srv/: SolarCharge.srv  Spiral.srv  WheelVelocities.srv
operations/test/: algorithm_tests.cpp
perception/: CMakeLists.txt  README.md  noisy_image_eliminate.py  package.xml
perception/action/: Find_PP_RS.action
perception/launch/: horizon_tracking_single.launch  launch_three_object_detection.launch  object_detection.launch  team_object_detection.launch
perception/model/: saved_model.pbtxt
perception/msg/: Object.msg  ObjectArray.msg  Objects.msg
perception/saved_model_v1/: saved_model.pbtxt
perception/src/: find_pp_rs.cpp  find_pp_rs_server.cpp  horizon_tracking.cpp  noisy_image_eliminate.cpp  object_detection_cap.py  object_detection_cap_lib.py  object_detection_save_image.cpp  object_detection_save_image_python.py  object_localization.py  three_object_detection.py
planning/: CMakeLists.txt  package.xml  planning.cpp
planning/classes/: pathPlanner.cpp  planner.cpp  planner.h
planning/include/: astar.h  cspace.h  cspace.h.IGNORE  dyn_planning.h  dyn_planning_2.h  pathPlanner.h  path_planner.h  path_planner_server.h  path_server.h  trajectory_methods.h
planning/launch/: planner.launch
planning/msg/: TrajectoryWithVelocities.msg
planning/src/: astar  astar.cpp  pathPlanner.cpp  path_planner.cpp  path_planner.h  path_planner_node.cpp
planning/srv/: GetCSpace.srv  trajectory.srv
planning/tests/: planning_tests.cpp
state_machines/: CMakeLists.txt  package.xml
state_machines/action/: HaulerStateMachineTask.action  RobotStateMachineTask.action  ScoutStateMachineTask.action
state_machines/launch/: desired_state_node.launch  start_excavator.launch  start_hauler.launch  start_scout.launch  state_machine_tester.launch
state_machines/msg/: robot_desired_state.msg  robot_state_status.msg
state_machines/src/: common_robot_state_machine.cpp  desired_state_node.py  excavator_state_machine.cpp  hauler_state_machine.cpp  imu_lowpass.cpp  new_state_machine_tester.cpp  odom_offset_checker.cpp  odom_resetter.cpp  out_of_commission_check.cpp  scout_state_machine.cpp  start_excavator_sm.cpp  start_excavator_sm_server.cpp  (+3 more)
team_level/: CMakeLists.txt  package.xml
templates/: CMakeLists.txt  package.xml
utils/: CMakeLists.txt  README.md  package.xml  setup.py
(+206 files in other folders)
